Convert to using Java 25 PEMEncoder